# AI-Service_MCP_Server

./: .env.example  README.md  pyproject.toml
kb/: 1.json  ingest.py
src/: main.py
test/: test-mcp.py  test-tavily.py
